# repo-inspector

./: .env.example  .gitignore  ENVIRONMENT_SETUP.md  IMPROVEMENTS.md  README.md  call_graph.md  check_neo4j_data.py  code_learner.py  neo4j_improvements.md  neo4j_usage_review.md  opensbi.calls.json  opensbi.deps.json  opensbi.json  pyproject.toml  query_history.json  requirements.txt  run_analysis.py  test_multi_source_retrieval_cli.py  test_neo4j_conn.py
.cursor/: cursorignore
.cursor/rules/: core.mdc  riper-workflow.mdc  start-phase.mdc  state.mdc
.cursor/templates/project_docs/: template_00_prd.md  template_01_architecture.md  template_02_work_plan_progress.md  template_03_project_bkm.md  template_99_session_workbench.md
001-dev-docs/: 00_prd.md  01_architecture.md  02_work_plan_progress.md  02_work_plan_progress_1.md  03_project_bkm.md  99_session_workbench.md  CLI_USAGE_GUIDE.md  DATA_EXPLORATION_GUIDE.md  DEPLOY_UBUNTU.md  ENVIRONMENT_SETUP.md  chunk-design-plan-progress.md  cli_enhance_design.md  cli_enhance_execution_plan.md  code-repo-learner-cli-test-results.md  code-repo-learner-cli-test-summary.md  code-repo-learner-cli-test.md  code-repo-learner-qa-issue-analysis.md  code-repo-learner-qa-issue-fix-plan.md  code-repo-learner-qa-issue-root-cause.md  code-repo-learner-qa-issue-summary.md  index.md  multi-source-rerank-fix-plan.md  project_isolation_design_plan.md  qa-issue-epic-story.md  qa-issue-implementation-plan.md  qa-issue-summary.md  qa-issue-test-plan.md  rerank_plan_progress.md
001-dev-docs/checklists/: prd_review_checklist.md  story_dod_checklist.md
config/: config.yml
reference_code_repo/.analysis/: dependencies.json  functions.json  processed_files.json  summary.md
src/code_learner/: __init__.py
src/code_learner/cli/: __init__.py  analyze_commands.py  call_graph_cli.py  call_graph_commands.py  check_function.py  code_analyzer_cli.py  dep_graph_commands.py  dependency_cli.py  helpers.py  merge_duplicate_functions.py  neo4j_cleanup.py  neo4j_function_query.py  neo4j_query.py  project_commands.py  query_commands.py  status_commands.py  unified_cli.py  (+1 more)
test_output/: dependencies.json  dependency_graph.md  functions.json  processed_files.json  summary.md
test_project/: main.c  math_utils.c  math_utils.h  utils.c  utils.h
tests/: check_qwen3_dependencies.py  conftest.py  jina-test.py  manual_test_code_qa.py  openrouter_test.py  qwen3_embedding_pathfinding.py  run_integration_tests.py  test_code_embedding.py  test_retrievers.py  test_tree_sitter_chunker.py
tests/fixtures/: complex.c  embedding_test_code.c  hello.c
tests/integration/: README.md  test_c_code_parsing_isolation.py  test_call_graph_api.py  test_calls_to_neo4j.py  test_code_analyzer_cli.py  test_code_qa_integration.py  test_embedding_pipeline.py  test_enhanced_query_config.py  test_multi_source_retrieval.py  test_opensbi_dependencies.py  test_project_isolation.py  test_rerank_integration.py  test_story_1_1_acceptance.py  test_story_1_3_acceptance.py  test_story_1_4_acceptance.py  test_story_2_1_4_acceptance.py  test_story_2_2_acceptance.py  test_vector_search_integration.py
tests/unit/: test_c_parser.py  test_c_parser_calls.py  test_call_graph_service.py  test_code_chunker.py  test_code_qa_service.py  test_config_manager.py  test_data_models.py  test_dependency_service.py  test_neo4j_store.py  test_neo4j_store_functions.py  test_package_imports.py  test_ubuntu_environment.py
(+58 files in other folders)
